@@ -1,14 +1,11 @@
 # Sample .travis.yml for R projects.
 #
-# See the r-travis repo and its wiki 
-#   https://github.com/craigcitro/r-travis/wiki
-#   https://github.com/eddelbuettel/r-travis/
+# See https://github.com/craigcitro/r-travis/wiki
+#     https://github.com/eddelbuettel/r-travis/
+
+sudo: required                                     
 
 language: c
-
-env:
-  global:
-    - _R_CHECK_FORCE_SUGGESTS_=FALSE
 
 before_install:
   - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
@@ -16,8 +13,7 @@ before_install:
   - ./travis-tool.sh bootstrap
 
 install:
-  - ./travis-tool.sh install_aptget libprotobuf-dev libprotoc-dev protobuf-compiler
-  - ./travis-tool.sh install_r Rcpp RCurl RUnit highlight
+  - ./travis-tool.sh install_aptget libprotobuf-dev libprotoc-dev protobuf-compiler r-cran-rcpp r-cran-runit r-cran-rcurl r-cran-highlight
 
 script: 
   - ./travis-tool.sh run_tests
